force-app/main/default/objects/Lease__c/fields/Annual_CAM_Charges__c.field-meta.xml
<CustomField>
    <fullName>Annual_CAM_Charges__c</fullName>
    <description>Annual Common Area Maintenance charges that tenant pays for shared building expenses like landscaping, cleaning, security, and general building maintenance. Applicable for most lease structures except full gross leases.</description>
    <label>Annual CAM Charges</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>