force-app/main/default/objects/Lease__c/fields/Annual_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Annual_Insurance__c</fullName>
    <description>Annual insurance premium amount that tenant is responsible for paying. Only applicable for lease structures where tenant pays insurance (e.g., Triple Net, Double Net).</description>
    <label>Annual Insurance</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>