force-app/main/default/objects/Lease__c/fields/Annual_Property_Taxes__c.field-meta.xml
<CustomField>
    <fullName>Annual_Property_Taxes__c</fullName>
    <description>Annual property tax amount that tenant is responsible for paying. Only applicable for lease structures where tenant pays property taxes (e.g., Triple Net, Double Net).</description>
    <inlineHelpText>Annual property tax amount that tenant is responsible for paying. Only applicable for lease structures where tenant pays property taxes (e.g., Triple Net, Double Net).</inlineHelpText>
    <label>Annual Property Taxes</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>