force-app/main/default/objects/Lease__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <description>The duration or term of the lease, in days.</description>
    <formula>End_Date__c - Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The duration or term of the lease, in days.</inlineHelpText>
    <label>Duration Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>