force-app/main/default/objects/Lease__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Date when the current lease term expires. Critical for renewal planning and space management. Used to trigger renewal notification workflows.</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>