force-app/main/default/objects/Lease__c/fields/Leased_Square_Footage__c.field-meta.xml
<CustomField>
    <fullName>Leased_Square_Footage__c</fullName>
    <description>Total rentable square footage covered by this lease agreement. Used for calculating cost per square foot and space utilization metrics.</description>
    <label>Leased Square Footage</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>