force-app/main/default/objects/Lease__c/fields/Monthly_Base_Rent__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Base_Rent__c</fullName>
    <description>Base monthly rental amount before additional charges. Does not include operating expenses, taxes, or insurance that may be tenant&apos;s responsibility based on lease structure. If the rent changes over the term of the lease, this field represents the initial, monthly base rent.</description>
    <inlineHelpText>Base monthly rental amount before additional charges. Does not include operating expenses, taxes, or insurance that may be tenant&apos;s responsibility based on lease structure. If the rent changes over the term of the lease, this field represents the initial, monthly base rent.</inlineHelpText>
    <label>Monthly Base Rent</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>