force-app/main/default/objects/Lease__c/fields/Monthly_Base_Rent_Per_Sq_Ft__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Base_Rent_Per_Sq_Ft__c</fullName>
    <description>Monthly base rent per square foot of leased space.</description>
    <formula>Monthly_Base_Rent__c / Leased_Square_Footage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Monthly base rent per square foot of leased space.</inlineHelpText>
    <label>Monthly Base Rent Per Sq. Ft.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>