force-app/main/default/objects/Lease__c/fields/Premises__c.field-meta.xml
<CustomField>
    <fullName>Premises__c</fullName>
    <description>Specific portion of the property covered by this lease (e.g., &quot;Suite 300&quot;, &quot;Floor 2&quot;, &quot;Units A-C&quot;, &quot;Entire Building&quot;). Identifies the exact space being leased within the larger property.</description>
    <label>Premises</label>
    <length>255</length>
    <type>Text</type>
</CustomField>