force-app/main/default/objects/Lease__c/fields/Renewal_Notice_Days__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Notice_Days__c</fullName>
    <description>Number of days advance notice required to exercise renewal option or notify of non-renewal. Critical for ensuring compliance with lease notification requirements.</description>
    <label>Renewal Notice Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>