force-app/main/default/objects/Lease__c/fields/Renewal_Option__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Option__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the tenant has the contractual right to renew this lease for an additional term. Important for long-term space planning and budget forecasting.</description>
    <label>Renewal Option</label>
    <type>Checkbox</type>
</CustomField>