force-app/main/default/objects/Lease__c/fields/Rent_Varies__c.field-meta.xml
<CustomField>
    <fullName>Rent_Varies__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, indicates that the rent varies over the term of the lease. For example, the rent may increase by 5% every 2 years over a 10 year lease.</description>
    <inlineHelpText>If checked, indicates that the rent varies over the term of the lease. For example, the rent may increase by 5% every 2 years over a 10 year lease.</inlineHelpText>
    <label>Rent Varies</label>
    <type>Checkbox</type>
</CustomField>