force-app/main/default/objects/Lease__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Date when the lease term begins and tenant takes possession of the premises. Used for calculating lease expiration and renewal timeline.</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>