force-app/main/default/objects/Lease__c/fields/Structure__c.field-meta.xml
<CustomField>
    <fullName>Structure__c</fullName>
    <description>Type of lease structure that determines financial responsibilities between tenant and landlord (e.g., Triple Net, Gross, Modified Gross). References the Lease Structure custom metadata type for detailed responsibility breakdown.</description>
    <inlineHelpText>Type of lease structure that determines financial responsibilities between tenant and landlord (e.g., Triple Net, Gross, Modified Gross). References the Lease Structure custom metadata type for detailed responsibility breakdown.</inlineHelpText>
    <label>Structure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gross Lease (Full Service Lease)</fullName>
            </value>
            <value>
                <fullName>Single Net Lease (N)</fullName>
            </value>
            <value>
                <fullName>Double Net Lease (NN)</fullName>
            </value>
            <value>
                <fullName>Triple Net Lease (NNN)</fullName>
            </value>
            <value>
                <fullName>Modified Gross Lease</fullName>
            </value>
            <value>
                <fullName>Percentage Lease</fullName>
            </value>
            <value>
                <fullName>Ground Lease</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>