force-app/main/default/objects/Lease__c/fields/Total_Monthly_Expense__c.field-meta.xml
<CustomField>
    <fullName>Total_Monthly_Expense__c</fullName>
    <description>The monthly sum of CAM charges, insurance, property taxes and base rent.</description>
    <formula>((Annual_CAM_Charges__c + Annual_Insurance__c + Annual_Property_Taxes__c) / 12) + Monthly_Base_Rent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The monthly sum of CAM charges, insurance, property taxes and base rent.</inlineHelpText>
    <label>Total Monthly Expense</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>