force-app/main/default/objects/Lease__c/fields/Total_Monthly_Expense_Per_Sq_Ft__c.field-meta.xml
<CustomField>
    <fullName>Total_Monthly_Expense_Per_Sq_Ft__c</fullName>
    <description>Total monthly expenses pre square foot of leased space.</description>
    <formula>Total_Monthly_Expense__c /  Leased_Square_Footage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total monthly expenses pre square foot of leased space.</inlineHelpText>
    <label>Total Monthly Expense Per Sq. Ft.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>