force-app/main/default/objects/Lease__c/listViews/All_Leases.listView-meta.xml
<ListView>
    <fullName>All_Leases</fullName>
    <columns>NAME</columns>
    <columns>Property__c</columns>
    <columns>Premises__c</columns>
    <columns>Monthly_Base_Rent__c</columns>
    <columns>End_Date__c</columns>
    <columns>Leased_Square_Footage__c</columns>
    <columns>Status__c</columns>
    <columns>Structure__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Leases</label>
</ListView>